--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -66,6 +67,7 @@
     <p>Revamp of DVD Screensaver</p>
     <button onclick="launchDVD()">LAUNCH DVD WINDOW<span class="blink">_</span></button>
     <p>Press button multiple times for more bouncing windows</p>
+    <p>Browser and OS Limitations may cause strange behavior.</p>
   </div>
 
   <script>
